Name:               rhythm-game
Version:            0.1
Description:        Universal rhythm game format and conversion.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
hs-source-dirs:     src
ghc-options:        -Wall
Build-Depends:      base, non-negative, event-list, midi, transformers, array

Exposed-modules:    Data.MusicTime

                    Data.FeedBack.Base
                    Data.FeedBack.Lex
                    Data.FeedBack.Parse

                    Data.RockBand.Common

                    Data.RockBand.Lexer.Beat
                    Data.RockBand.Lexer.Drums
                    Data.RockBand.Lexer.Basic
                    Data.RockBand.Lexer.Vocal
                    Data.RockBand.Lexer.ProKeys
                    Data.RockBand.Lexer.ProGuitar
                    Data.RockBand.Lexer.Events
                    Data.RockBand.Lexer.File
                    Data.RockBand.Lexer.MIDI
                    
                    Data.RockBand.Input.Drums
