Name:               rhythm-game
Version:            0.1
Description:        Universal rhythm game format and conversion.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
hs-source-dirs:     src
ghc-options:        -Wall
Build-Depends:      base, non-negative, event-list, midi, transformers, array

Exposed-modules:    Data.Rhythm.Types

                    Data.Rhythm.FeedBack.Base
                    Data.Rhythm.FeedBack.Lex
                    Data.Rhythm.FeedBack.Parse
                    Data.Rhythm.FeedBack.Show

                    Data.Rhythm.RockBand.Common

                    Data.Rhythm.RockBand.Lexer.Beat
                    Data.Rhythm.RockBand.Lexer.Drums
                    Data.Rhythm.RockBand.Lexer.Basic
                    Data.Rhythm.RockBand.Lexer.Vocal
                    Data.Rhythm.RockBand.Lexer.ProKeys
                    Data.Rhythm.RockBand.Lexer.ProGuitar
                    Data.Rhythm.RockBand.Lexer.Events
                    Data.Rhythm.RockBand.Lexer.File
                    Data.Rhythm.RockBand.Lexer.MIDI
