Name:               rhythm
Version:            0.1
Synopsis:           Universal rhythm game types, formats, and conversion.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && <= 5, non-negative, event-list, midi,
                    transformers, array, pretty, bytestring, binary
  Exposed-modules:  Data.Rhythm.Time
                    Data.Rhythm.Event
                    Data.Rhythm.Interpret
                    
                    Data.Rhythm.FeedBack
                    Data.Rhythm.FeedBack.Lex
                    Data.Rhythm.FeedBack.Parse
                    Data.Rhythm.FeedBack.Show
                    
                    Data.Rhythm.MIDI

                    Data.Rhythm.RockBand.Common
                    
                    Data.Rhythm.RockBand.Lex.Events
                    Data.Rhythm.RockBand.Lex.Beat
                    Data.Rhythm.RockBand.Lex.Vocals
                    Data.Rhythm.RockBand.Lex.Drums
                    Data.Rhythm.RockBand.Lex.Basic
                    Data.Rhythm.RockBand.Lex.ProKeys
                    Data.Rhythm.RockBand.Lex.ProGuitar
                   
                    Data.Rhythm.Guitar.Base

  hs-source-dirs:   src
  ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/onyxite/rhythm.git
