Name:               rhythm
Version:            0.0.1
Synopsis:           Process rhythm-action video game information
Description:        A common set of types and operations for a variety of data
                    formats which store events along a timeline.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5,
                    non-negative >= 0.1 && < 0.2,
                    event-list >= 0.1 && < 0.2,
                    transformers >= 0.3 && < 0.4,
                    inflist >= 0.0.1 && < 0.1,
                    midi,
                    array,
                    time,
                    void
                    
  Exposed-modules:  Data.Rhythm.Time
                    Data.Rhythm.TimeSignature
                    Data.Rhythm.Event
                    Data.Rhythm.Status
                    Data.Rhythm.Guitar
                    Data.Rhythm.EventList
                    Data.Rhythm.Parser
                    
                    Data.Rhythm.FeedBack
                    Data.Rhythm.FeedBack.Lex
                    Data.Rhythm.FeedBack.Parse
                    Data.Rhythm.FeedBack.Show
                    
                    Data.Rhythm.MIDI
                    
                    Data.Rhythm.RockBand.Common
                    Data.Rhythm.RockBand.Lex.File
                    Data.Rhythm.RockBand.Lex.Beat
                    Data.Rhythm.RockBand.Lex.Events
                    Data.Rhythm.RockBand.Lex.Drums
                    Data.Rhythm.RockBand.Lex.Basic
                    Data.Rhythm.RockBand.Lex.Vocals
                    Data.Rhythm.RockBand.Lex.ProKeys
                    Data.Rhythm.RockBand.Lex.ProGuitar
                    
                    Data.Rhythm.Rocksmith

  hs-source-dirs:   src
  ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/mtolly/rhythm.git

Executable pgautoplay
  Build-Depends:    base >= 4 && <= 5, rhythm, midiproadapter, event-list,
                    non-negative, midi, transformers, containers
  Main-Is:          pgautoplay.hs
  ghc-options:      -Wall

Executable pgtonotes
  Build-Depends:    base >= 4 && <= 5, rhythm, midiproadapter, event-list,
                    non-negative, midi
  Main-Is:          pgtonotes.hs
  ghc-options:      -Wall

Executable beatgen
  Build-Depends:    base >= 4 && <= 5, rhythm, midi, inflist
  Main-Is:          beatgen.hs
  ghc-options:      -Wall
