Name:               rhythm-feedback
Version:            0.0.1
Synopsis:           FeedBack *.chart module for the rhythm library
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5,
                    rhythm == 0.0.1,
                    array,
                    non-negative >= 0.1 && < 0.2,
                    event-list >= 0.1 && < 0.2
                    
  Exposed-modules:  Data.Rhythm.FeedBack
                    Data.Rhythm.FeedBack.Lex
                    Data.Rhythm.FeedBack.Parse
                    Data.Rhythm.FeedBack.Show

  hs-source-dirs:   src
  ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/mtolly/rhythm-feedback.git
