Name:               rhythm-rockband
Version:            0.0.1
Synopsis:           Rock Band module for the rhythm library
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5,
                    non-negative >= 0.1 && < 0.2,
                    event-list >= 0.1 && < 0.2,
                    midi >= 0.2 && < 0.3,
                    rhythm == 0.0.1,
                    rhythm-midi == 0.0.1
                    
  Exposed-modules:  Data.Rhythm.RockBand.Common
                    
                    Data.Rhythm.RockBand.Lex.File
                    Data.Rhythm.RockBand.Lex.Beat
                    Data.Rhythm.RockBand.Lex.Events
                    Data.Rhythm.RockBand.Lex.Drums
                    Data.Rhythm.RockBand.Lex.Basic
                    Data.Rhythm.RockBand.Lex.Vocals
                    Data.Rhythm.RockBand.Lex.ProKeys
                    Data.Rhythm.RockBand.Lex.ProGuitar

  hs-source-dirs:   src
  ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/mtolly/rhythm.git
