Name:               rhythm
Version:            0.0.1
Synopsis:           Types and operations on musical event information, such as
                    the information used by rhythm action video games.
License:            GPL
License-file:       LICENSE
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5,
                    non-negative >= 0.1 && < 0.2,
                    event-list >= 0.1 && < 0.2,
                    transformers >= 0.3 && < 0.4,
                    inflist >= 0.0.1 && < 0.1
                    
  Exposed-modules:  Data.Rhythm.Time
                    Data.Rhythm.TimeSignature
                    Data.Rhythm.Event
                    Data.Rhythm.Interpret
                    Data.Rhythm.Status

  hs-source-dirs:   src
  ghc-options:      -Wall

Source-Repository head
  Type:             git
  Location:         git://github.com/mtolly/rhythm.git
